--- a/all/index.html
+++ b/all/index.html
@@ -30,8 +30,27 @@
 	};
 	var encoding = "color_point";
 	var chartTitle = "Diamonds Scatterplot Matrix";
+	var rects = [
+		{
+			x: 5,
+			y: 1,
+			xmin: 40,
+			ymin: 1,
+			xmax: 62,
+			ymax: 2.5
+		},
+		{
+			x: 10,
+			y: 7,
+			xmin: 0,
+			ymin: 1000,
+			xmax: 30,
+			ymax: 10000
+		},
+		
+	];
 	
-	var chart = multi_scatter(dataSource, attr, category, animate, encoding,chartTitle);
+	var chart = multi_scatter(dataSource, attr, category, animate, encoding,chartTitle, rects);
 	
 	function preload() {
 		chart.preload();
