Update gridWidth to be fixed; change colors

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<h1>p5.js practice sketches</h1>
 	<a href="all/index.html">Entire diamonds</a><br>
 	<a href="oneK/index.html">Diamonds 1K points</a><br>
+	<a href="synthetic/index.html">Synthetic data</a><br>
 </body>
 </html>
