Get source from urlParams

--- a/synthetic/index.html
+++ b/synthetic/index.html
@@ -14,7 +14,7 @@
 </body>
 <script language="javascript" type="text/javascript">
 	
-	var dataSource = "../data/synthetic-data.csv";
+	var dataSource = "../data/synthetic-data.cs";
 	var attr = {
 		all: ["v","w","x","y","z","class"],
 		use: [0, 1, 2, 3, 4]
