Get animate and chart title from urlParams

--- a/oneK/index.html
+++ b/oneK/index.html
@@ -25,7 +25,7 @@
 		values: ["Fair", "Good", "Very Good", "Premium", "Ideal"]
 	};
 	var animate = {
-		isAnimate: false,
+		isAnimate: true,
 		animateNum: 1
 	};
 	var encoding = "color_point";
