Bug fix: axis max

--- a/synthetic/index.html
+++ b/synthetic/index.html
@@ -14,7 +14,7 @@
 </body>
 <script language="javascript" type="text/javascript">
 	
-	var dataSource = "../data/synthetic-data.csv";
+	var dataSource = "../data/synthetic-4-1-1.csv";
 	var attr = {
 		all: ["v","w","x","y","z","class"],
 		use: [0, 1, 2, 3, 4]
@@ -25,7 +25,7 @@
 		values: ["A", "B", "C", "D"]
 	};
 	var animate = {
-		isAnimate: true,
+		isAnimate: false,
 		animateNum: 3
 	};
 	var encoding = "color_point";
