Add initDraw as URL param

--- a/synthetic/index.html
+++ b/synthetic/index.html
@@ -26,7 +26,8 @@
 	};
 	var animate = {
 		isAnimate: false,
-		animateNum: 3
+		animateNum: 3,
+		initDraw: false
 	};
 	var encoding = "color_point";
 	var chartTitle = "Synthetic Scatterplot Matrix";
