--- a/synthetic/index.html
+++ b/synthetic/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.23/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
@@ -29,10 +29,9 @@
 		animateNum: 3,
 		initDraw: false
 	};
-	var encoding = "color_point";
 	var chartTitle = "Synthetic Scatterplot Matrix";
 	
-	var chart = multi_scatter(dataSource, attr, category, animate, encoding,chartTitle);
+	var chart = multi_scatter(dataSource, attr, category, animate, chartTitle);
 	
 	function preload() {
 		chart.preload();
