--- a/all/index.html
+++ b/all/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
-  <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
+  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
   <script language="javascript" type="text/javascript" src="../multi_scatter.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
@@ -51,6 +51,7 @@
 	];
 	
 	var chart = multi_scatter(dataSource, attr, category, animate, encoding,chartTitle, rects);
+	var slider;
 	
 	function preload() {
 		chart.preload();
