Add links to more plots on landing page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 	<a href="all/index.html">Entire diamonds</a><br>
 	<a href="oneK/index.html">Diamonds 1K points</a><br>
 	<a href="synthetic/index.html">Synthetic data</a><br>
+	<a href="wine/index.html">Wine data</a><br>
+	<a href="iris/index.html">Iris data</a><br>
 </body>
 </html>
