--- a/wine/index.html
+++ b/wine/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.23/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
-  <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
+  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
   <script language="javascript" type="text/javascript" src="../multi_scatter.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
@@ -44,30 +44,28 @@
 	};
 
 	var animate = {
-	  isAnimate: true,
-	  animateNum: 1,
-	  initDraw: true
+	  isAnimate: true
 	};
 
-	var encoding = "color_point";
 	var chartTitle = "ANISPLOM of Wine";
 
-	var chart = multi_scatter(dataSource, attr, category, animate, encoding, chartTitle);
+	var chart = multi_scatter(dataSource, attr, category, animate, chartTitle);
+	var slider;
 
 	function preload() {
-	  chart.preload();
+		chart.preload();
 	}
-
+	
 	function setup() {
-	  chart.setup();
+		chart.setup();
 	}
-
+	
 	function draw() {
-	  chart.draw();
-
-	  if (frameCount % 120 == 0) {
-	    console.log(frameRate());
-	  }
+		chart.draw();
+	}
+	
+	function mousePressed() {
+		chart.mousePressed();
 	}
 	
 </script>
