--- a/all/index.html
+++ b/all/index.html
@@ -8,6 +8,7 @@
   <script language="javascript" type="text/javascript" src="../multi_scatter.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
+  <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
 </head>
 
 <body>
