Add highlight rect

--- a/all/index.html
+++ b/all/index.html
@@ -66,6 +66,10 @@
 	function mousePressed() {
 		chart.mousePressed();
 	}
+
+	function mouseDragged() {
+		chart.mouseDragged();
+	}
 	
 </script>
 </html>
