--- a/iris/index.html
+++ b/iris/index.html
@@ -47,6 +47,10 @@
 	function mousePressed() {
 		chart.mousePressed();
 	}
+
+	function mouseDragged() {
+		chart.mouseDragged();
+	}
 	
 </script>
 </html>
