--- a/oneK/index.html
+++ b/oneK/index.html
@@ -65,6 +65,10 @@
 	function mousePressed() {
 		chart.mousePressed();
 	}
-	
+
+	function mouseDragged() {
+		chart.mouseDragged();
+	}
+
 </script>
 </html>
