--- a/wine/index.html
+++ b/wine/index.html
@@ -67,6 +67,10 @@
 	function mousePressed() {
 		chart.mousePressed();
 	}
+
+	function mouseDragged() {
+		chart.mouseDragged();
+	}
 	
 </script>
 </html>
