Bug fix: box chasing after pointer will button clicked

--- a/synthetic/index.html
+++ b/synthetic/index.html
@@ -44,8 +44,20 @@
 		chart.draw();
 	}
 	
+	function mouseClicked() {
+		chart.mouseClicked();
+	}
+	
 	function mousePressed() {
 		chart.mousePressed();
+	}
+
+	function mouseReleased() {
+		chart.mouseReleased();
+	}
+
+	function mouseMoved() {
+		chart.mouseMoved();
 	}
 	
 	function mouseDragged() {
