Fix mouse events for all diamonds and wine

--- a/wine/index.html
+++ b/wine/index.html
@@ -64,10 +64,22 @@
 		chart.draw();
 	}
 	
+	function mouseClicked() {
+		chart.mouseClicked();
+	}
+	
 	function mousePressed() {
 		chart.mousePressed();
 	}
 
+	function mouseReleased() {
+		chart.mouseReleased();
+	}
+
+	function mouseMoved() {
+		chart.mouseMoved();
+	}
+	
 	function mouseDragged() {
 		chart.mouseDragged();
 	}
