--- a/all/index.html
+++ b/all/index.html
@@ -63,10 +63,22 @@
 		chart.draw();
 	}
 	
+	function mouseClicked() {
+		chart.mouseClicked();
+	}
+	
 	function mousePressed() {
 		chart.mousePressed();
 	}
 
+	function mouseReleased() {
+		chart.mouseReleased();
+	}
+
+	function mouseMoved() {
+		chart.mouseMoved();
+	}
+	
 	function mouseDragged() {
 		chart.mouseDragged();
 	}
