Add experimentr version of the page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<a href="synthetic/index.html">Synthetic data</a><br>
 	<a href="wine/index.html">Wine data</a><br>
 	<a href="iris/index.html">Iris data</a><br>
+	<a href="experimentr/index.html">Experimentr preview</a><br>
 </body>
 </html>
