Add debugging info: # points in rect

--- a/experimentr/index.html
+++ b/experimentr/index.html
@@ -126,6 +126,7 @@
 	
 	function printDebugInfo() {
 		console.log(storeInfo);
+		console.log("# points in rect", chart.getNumPointsInRect());
 	}
 	
 </script>
