--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -3,8 +3,20 @@
 <script language="javascript" type="text/javascript" src="../multi_scatter.js"></script>
 <style>
 body {
+  font-family: sans-serif;
+  font-size: 11pt;
   background-color: whitesmoke;
   text-align: center;
+}
+
+th {
+  min-width: 5em;
+  font-size: 8pt;
+}
+
+td {
+  text-align: center;
+  font-size: 10pt;
 }
 </style>
 
@@ -36,6 +48,37 @@ Load Blobs:
 </tr>
 </table>
 
+<br/>
+
+<table align="center" border="1" cellspacing="0" padding="2">
+<thead>
+  <tr>
+    <th colspan="3">Points</th>
+    <th colspan="3">Variable 1</th>
+    <th colspan="3">Variable 2</th>
+  </tr>
+  <tr>
+    <th>Class</th>
+    <th>Total</th>
+    <th>Best</th>
+    <th>Name</th>
+    <th>Min</th>
+    <th>Max</th>
+    <th>Name</th>
+    <th>Min</th>
+    <th>Max</th>
+  </tr>
+</thead>
+<tbody>
+  <tr id="debug">
+  </tr>
+</tbody>
+</table>
+
+
+
+<p id="output"></p>
+
 <script language="javascript" type="text/javascript">
 	var dataName = window.location.search ? window.location.search.slice(1) : "class-800-001";
   var dataSource = dataName + ".csv";
@@ -60,6 +103,17 @@ Load Blobs:
 
 	var chart = multi_scatter(dataSource, attr, category, animate, "filled_normal", dataName, null, "true", "chart");
 
+  var maxNum = 0;
+
+  var cells = ["n_class", "n_cur", "n_max", "x_var", "x_min", "x_max", "y_var", "y_min", "y_max"];
+  var row = document.getElementById("debug");
+  var td = {};
+
+  cells.forEach(function(d, i) {
+    td[d] = row.insertCell(-1);
+    td[d].innerHTML = "&nbsp;";
+  });
+
 	function preload() { chart.preload(); }
   function draw() { chart.draw(); }
 
@@ -78,7 +132,20 @@ Load Blobs:
 		var timestamp = Date.now();
 
 		if(chart.mouseReleased()) {
-			console.log("n", [chart.getNumPointsInRect()], chart.highlightRect.xAttr, [chart.highlightRect.xLow, chart.highlightRect.xHigh], chart.highlightRect.yAttr, [chart.highlightRect.yLow, chart.highlightRect.yHigh]);
+      var count = chart.getNumPointsInRect();
+      var sum = Object.values(count).reduce(function(a, b) { return a + b; }, 0);
+
+      maxNum = sum > maxNum ? sum : maxNum;
+
+      td.n_class.innerHTML = Object.keys(count).length;
+      td.n_cur.innerHTML = sum;
+      td.n_max.innerHTML = maxNum;
+      td.x_var.innerHTML = chart.highlightRect.xAttr;
+      td.x_min.innerHTML = chart.highlightRect.xLow.toFixed(2);
+      td.x_max.innerHTML = chart.highlightRect.xHigh.toFixed(2);
+      td.y_var.innerHTML = chart.highlightRect.yAttr;
+      td.y_min.innerHTML = chart.highlightRect.yLow.toFixed(2);
+      td.y_max.innerHTML = chart.highlightRect.yHigh.toFixed(2);
 		}
 
 		return false;
