New test files.

--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -38,7 +38,16 @@ Load Blobs:
 <a href="?blobs-800-005">05</a> &bull;
 <a href="?blobs-800-006">06</a> &bull;
 <a href="?blobs-800-007">07</a> &bull;
-<a href="?blobs-800-008">08</a>
+<a href="?blobs-800-008">08</a><br/>
+Load Tests:
+<a href="?test01">01</a> &bull;
+<a href="?test02">02</a> &bull;
+<a href="?test03">03</a> &bull;
+<a href="?test04">04</a> &bull;
+<a href="?test05">05</a> &bull;
+<a href="?test06">06</a> &bull;
+<a href="?test07">07</a> &bull;
+<a href="?test08">08</a>
 </p>
 
 <table align="center">
