--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -47,7 +47,11 @@ Load Tests:
 <a href="?test05">05</a> &bull;
 <a href="?test06">06</a> &bull;
 <a href="?test07">07</a> &bull;
-<a href="?test08">08</a>
+<a href="?test08">08</a> &bull;
+<a href="?test01">09</a> &bull;
+<a href="?test02">10</a> &bull;
+<a href="?test03">11</a> &bull;
+<a href="?test04">12</a>
 </p>
 
 <table align="center">
