--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -51,7 +51,12 @@ Load Tests:
 <a href="?test01">09</a> &bull;
 <a href="?test02">10</a> &bull;
 <a href="?test03">11</a> &bull;
-<a href="?test04">12</a>
+<a href="?test04">12</a><br/>
+Load Same:
+<a href="?same01">01</a> &bull;
+<a href="?same02">02</a> &bull;
+<a href="?same03">03</a> &bull;
+<a href="?same04">04</a>
 </p>
 
 <table align="center">
