--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -56,7 +56,11 @@ Load Same:
 <a href="?same01">01</a> &bull;
 <a href="?same02">02</a> &bull;
 <a href="?same03">03</a> &bull;
-<a href="?same04">04</a>
+<a href="?same04">04</a> &bull;
+<a href="?same05">05</a> &bull;
+<a href="?same06">06</a> &bull;
+<a href="?same07">07</a> &bull;
+<a href="?same08">08</a>
 </p>
 
 <table align="center">
