New section 2 data.

--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -19,17 +19,28 @@ td {
 </style>
 
 <p>
-Load Data:
-<a href="?data00">00</a> &bull;
-<a href="?data01">01</a> &bull;
-<a href="?data02">02</a> &bull;
-<a href="?data03">03</a> &bull;
-<a href="?data04">04</a> &bull;
-<a href="?data05">05</a> &bull;
-<a href="?data06">06</a> &bull;
-<a href="?data07">07</a> &bull;
-<a href="?data08">08</a> &bull;
-<a href="overview.html">Overview</a>
+  Section 1:
+  <a href="?data_1_0">00</a> &bull;
+  <a href="?data_1_1">01</a> &bull;
+  <a href="?data_1_2">02</a> &bull;
+  <a href="?data_1_3">03</a> &bull;
+  <a href="?data_1_4">04</a> &bull;
+  <a href="?data_1_5">05</a> &bull;
+  <a href="?data_1_6">06</a> &bull;
+  <a href="?data_1_7">07</a> &bull;
+  <a href="?data_1_8">08</a> &bull;
+  <a href="section1.html">Overview</a><br/>
+  Section 2:
+  <a href="?data_2_0">00</a> &bull;
+  <a href="?data_2_1">01</a> &bull;
+  <a href="?data_2_2">02</a> &bull;
+  <a href="?data_2_3">03</a> &bull;
+  <a href="?data_2_4">04</a> &bull;
+  <a href="?data_2_5">05</a> &bull;
+  <a href="?data_2_6">06</a> &bull;
+  <a href="?data_2_7">07</a> &bull;
+  <a href="?data_2_8">08</a> &bull;
+  <a href="section2.html">Overview</a>
 </p>
 
 <table align="center">
@@ -40,7 +51,7 @@ Load Data:
 </table>
 
 <script language="javascript" type="text/javascript">
-  var search = window.location.search ? window.location.search.slice(1) : "data00";
+  var search = window.location.search ? window.location.search.slice(1) : "data_2_0";
 
   document.getElementById("animated").src = "template.html?" + search + "&true";
   document.getElementById("static").src = "template.html?" + search + "&false";
