--- a/experimentr/demos/template.html
+++ b/experimentr/demos/template.html
@@ -50,7 +50,7 @@ td {
 </table>
 
 <script language="javascript" type="text/javascript">
-  var search = window.location.search ? window.location.search.slice(1) : "data00&true";
+  var search = window.location.search ? window.location.search.slice(1) : "data_2_0&true";
   var params = search.split('&');
 
   var data = params.length === 2 ? params[0] : 'data00';
