New section 2 data.

--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -40,6 +40,10 @@ td {
   <a href="?data_2_6">06</a> &bull;
   <a href="?data_2_7">07</a> &bull;
   <a href="?data_2_8">08</a> &bull;
+  Train
+  <a href="?train_2_0">00</a> &bull;
+  <a href="?train_2_1">01</a> &bull;
+  <a href="?train_2_2">02</a> &bull;
   <a href="section2.html">Overview</a>
 </p>
 
