--- a/experimentr/demos/section2.html
+++ b/experimentr/demos/section2.html
@@ -13,8 +13,6 @@ body {
 
 <iframe src="template.html?data_2_0&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<br/><br/>
-
 <iframe src="template.html?data_2_1&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
 <iframe src="template.html?data_2_2&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
@@ -30,3 +28,9 @@ body {
 <iframe src="template.html?data_2_7&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
 <iframe src="template.html?data_2_8&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+
+<iframe src="template.html?train_2_0&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+
+<iframe src="template.html?train_2_1&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+
+<iframe src="template.html?train_2_2&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
