--- a/experimentr/demos/section1.html
+++ b/experimentr/demos/section1.html
@@ -11,22 +11,22 @@ body {
 </style>
 
 
-<iframe src="template.html?data_1_0&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_0_v_z&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
 <br/><br/>
 
-<iframe src="template.html?data_1_1&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_1_v_x&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<iframe src="template.html?data_1_2&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_2_w_x&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<iframe src="template.html?data_1_3&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_3_v_x&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<iframe src="template.html?data_1_4&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_4_w_y&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<iframe src="template.html?data_1_5&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_5_v_w&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<iframe src="template.html?data_1_6&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_6_v_y&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<iframe src="template.html?data_1_7&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_7_w_x&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<iframe src="template.html?data_1_8&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+<iframe src="template.html?data_1_8_v_w&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
