--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -19,6 +19,13 @@ td {
 </style>
 
 <p>
+  Old:
+  <a href="?data_1_1">01</a> &bull;
+  <a href="?data_1_2">02</a> &bull;
+  <a href="?data_1_3">03</a> &bull;
+  <a href="?data_1_4">04</a> &bull;
+  <a href="?data_1_5">05</a> &bull;
+  <a href="?data_1_6">06</a> <br/>
   Section 1:
   <a href="?data_1_0_v_z">00</a> &bull;
   <a href="?data_1_1_v_x">01</a> &bull;
