--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -19,27 +19,14 @@ td {
 </style>
 
 <p>
-  Old:
-  <a href="?data_1_1">01</a> &bull;
-  <a href="?data_1_2">02</a> &bull;
-  <a href="?data_1_3">03</a> &bull;
-  <a href="?data_1_4">04</a> &bull;
-  <a href="?data_1_5">05</a> &bull;
-  <a href="?data_1_6">06</a> <br/>
   Section 1:
-  <a href="?data_1_0_v_z">00</a> &bull;
-  <a href="?data_1_1_v_x">01</a> &bull;
-  <a href="?data_1_2_w_x">02</a> &bull;
-  <a href="?data_1_3_v_x">03</a> &bull;
-  <a href="?data_1_4_w_y">04</a> &bull;
-  <a href="?data_1_5_v_w">05</a> &bull;
-  <a href="?data_1_6_v_y">06</a> &bull;
-  <a href="?data_1_7_w_x">07</a> &bull;
-  <a href="?data_1_8_v_w">08</a> &bull;
-  Train
-  <a href="?train_1_0_v_z">00</a> &bull;
-  <a href="?train_1_1_v_x">01</a> &bull;
-  <a href="?train_1_2_w_x">02</a> &bull;
+  <a href="?data_1_0_x_z">00</a> &bull;
+  <a href="?data_1_1_w_y">01</a> &bull;
+  <a href="?data_1_2_x_y">02</a> &bull;
+  <a href="?data_1_3_v_w">03</a> &bull;
+  <a href="?data_1_4_v_y">04</a> &bull;
+  <a href="?data_1_5_w_x">05</a> &bull;
+  <a href="?data_1_6_y_z">06</a> &bull;
   <a href="section1.html">Overview</a><br/>
   Section 2:
   <a href="?data_2_0">00</a> &bull;
