Adding section 1 training.

--- a/experimentr/demos/section1.html
+++ b/experimentr/demos/section1.html
@@ -13,8 +13,6 @@ body {
 
 <iframe src="template.html?data_1_0_x_z&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
-<br/><br/>
-
 <iframe src="template.html?data_1_1_w_y&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
 <iframe src="template.html?data_1_2_x_y&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
@@ -26,3 +24,9 @@ body {
 <iframe src="template.html?data_1_5_w_x&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
 
 <iframe src="template.html?data_1_6_y_z&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+
+<iframe src="template.html?train_1_0_x_z&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+
+<iframe src="template.html?train_1_1_w_y&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
+
+<iframe src="template.html?train_1_2_x_y&false" width="620" height="700" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"></iframe>
