--- a/experimentr/demos/index.html
+++ b/experimentr/demos/index.html
@@ -27,6 +27,10 @@ td {
   <a href="?data_1_4_v_y">04</a> &bull;
   <a href="?data_1_5_w_x">05</a> &bull;
   <a href="?data_1_6_y_z">06</a> &bull;
+  Train:
+  <a href="?train_1_0_x_z">00</a> &bull;
+  <a href="?train_1_1_w_y">01</a> &bull;
+  <a href="?train_1_2_x_y">02</a> &bull;
   <a href="section1.html">Overview</a><br/>
   Section 2:
   <a href="?data_2_0">00</a> &bull;
