Label highlight bug fix: add check to prevent issue if mouseMoved is called before screen loads

--- a/experimentr/index.html
+++ b/experimentr/index.html
@@ -126,7 +126,8 @@
 	
 	function printDebugInfo() {
 		console.log(storeInfo);
-		console.log("# points in rect", chart.getNumPointsInRect());
+		var info = chart.getDataInRect();
+		console.log("# points in rect", info.numPoints, "# classes", info.numClasses);
 	}
 	
 </script>
