--- a/index.html
+++ b/index.html
@@ -1,14 +1,64 @@
 <html>
 <head>
   <meta charset="UTF-8">
+	<script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
+	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/addons/p5.dom.js"></script>
+	<script language="javascript" type="text/javascript" src="multi_scatter.js"></script>
+	<script language="javascript" type="text/javascript" src="load_data_config.js"></script>
 </head>
 <body>
-	<h1>p5.js practice sketches</h1>
-	<a href="all/index.html">Entire diamonds</a><br>
-	<a href="oneK/index.html">Diamonds 1K points</a><br>
-	<a href="synthetic/index.html">Synthetic data</a><br>
-	<a href="wine/index.html">Wine data</a><br>
-	<a href="iris/index.html">Iris data</a><br>
-	<a href="experimentr/index.html">Experimentr preview</a><br>
+	<h1>Animated scatterplot matrix</h1>
+	<div>
+		<label htmlFor="data-select">Select a dataset to display</label>
+		<select id="data-select">
+				<option selected value="synthetic">synthetic</option>
+				<option value="diamonds">diamonds</option>
+		</select>
+	</div>
+	<div id="chart" style="position: relative;"></div>
 </body>
+<script language="javascript" type="text/javascript">
+  var config;
+	var chart;
+	var loading = false;
+  function onDataSelect() {
+    config = get_data_config();
+    chart = multi_scatter(config.path, config.attr, config.category, config.animate, "", "chart");
+	}
+  document.getElementById("data-select").addEventListener("change", onDataSelect);
+	
+	onDataSelect();
+	function preload() {
+		chart.preload();
+	}
+	
+	function setup() {
+		chart.setup();
+	}
+	
+	function draw() {
+		chart.draw();
+	}
+	
+	function mouseClicked() {
+		chart.mouseClicked();
+	}
+	
+	function mousePressed() {
+		chart.mousePressed();
+	}
+
+	function mouseReleased() {
+		chart.mouseReleased();
+	}
+
+	function mouseMoved() {
+		chart.mouseMoved();
+	}
+	
+	function mouseDragged() {
+		chart.mouseDragged();
+	}
+
+</script>
 </html>
