Add wine to dropdown

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<div>
 		<label htmlFor="data-select">Select a dataset to display</label>
 		<select id="data-select">
-				<option selected value="synthetic">synthetic</option>
 				<option value="diamonds">diamonds</option>
+				<option selected value="synthetic">synthetic</option>
+				<option value="wine">wine</option>
 		</select>
 	</div>
 	<div id="chart" style="position: relative;"></div>
