--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
 	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/addons/p5.dom.js"></script>
 	<script language="javascript" type="text/javascript" src="multi_scatter.js"></script>
 	<script language="javascript" type="text/javascript" src="load_data_config.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Animated scatterplot matrix</h1>
-	<div>
-		<label htmlFor="data-select">Select a dataset to display</label>
-		<select id="data-select">
-				<option value="diamonds">diamonds</option>
-				<option selected value="synthetic">synthetic</option>
-				<option value="wine">wine</option>
-		</select>
+	<div style="text-align: center">
+		<h1>Animated scatterplot matrix</h1>
+		<div>
+			<label htmlFor="data-select">Select a dataset to display</label>
+			<select id="data-select">
+					<option value="abalone">abalone</option>
+					<option value="diamonds">diamonds</option>
+					<option value="iris">iris</option>
+					<option selected value="synthetic">synthetic</option>
+					<option value="wine">wine</option>
+			</select>
+		</div>
+		<div id="chart" style="position: relative;"></div>
 	</div>
-	<div id="chart" style="position: relative;"></div>
 </body>
 <script language="javascript" type="text/javascript">
   var config;
@@ -31,7 +36,7 @@
   document.getElementById("data-select").addEventListener("change", onDataSelect);
 	
 	config = get_data_config();
-  chart = multi_scatter(config.path, config.attr, config.category, config.animate, "", "chart");
+  chart = multi_scatter(config.path, config.attr, config.category, config.animate, null, "chart");
 
   function preload() {
 		chart.preload();
