--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<script language="javascript" type="text/javascript" src="multi_scatter.js"></script>
 	<script language="javascript" type="text/javascript" src="load_data_config.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	<div style="text-align: center">
+	<div class="center">
 		<h1>Animated scatterplot matrix</h1>
 		<div>
 			<label htmlFor="data-select">Select a dataset to display</label>
@@ -20,23 +21,84 @@
 					<option value="wine">wine</option>
 			</select>
 		</div>
-		<div id="chart" style="position: relative;"></div>
+		<div id="chart"></div>
+		<div>
+			<table class="center" id="highlight_info">
+				<tr>
+					<th colspan="2">Current</th>
+					<th colspan="2">Best</th>
+				</tr>
+				<tr>
+					<th># points</th>
+					<th># classes</th>
+					<th># points</th>
+					<th># classes</th>
+				</tr>
+				<tr>
+					<td id="num_points_curr">0</th>
+					<td id="num_classes_curr">0</th>
+					<td id="num_points_best">0</th>
+					<td id="num_classes_best">0</th>
+				</tr>
+			</table>
+		</div>
 	</div>
 </body>
 <script language="javascript" type="text/javascript">
+
   var config;
 	var chart;
+	var highlight;
+	var best = {
+		num_points: 0,
+		num_classes: 0
+	}
 
   function onDataSelect() {
 		config = get_data_config();
 		remove();
     chart = multi_scatter(config.path, config.attr, config.category, config.animate, "", "chart");
 	  new p5();
+		resetHighlightDataDisplay();
 	}
   document.getElementById("data-select").addEventListener("change", onDataSelect);
-	
+
+	function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+	}
+
+	function resetHighlightDataDisplay() {
+		updateHighlightDataDisplay("curr", 0, 0);
+		updateHighlightDataDisplay("best", 0, 0);
+	}
+
+	function updateHighlightDataDisplay(type, num_points, num_classes) {
+		if (type === "curr") {
+			document.getElementById("num_points_curr").innerHTML = num_points;
+			document.getElementById("num_classes_curr").innerHTML = num_classes;
+		} else {
+			document.getElementById("num_points_best").innerHTML = num_points;
+			document.getElementById("num_classes_best").innerHTML = num_classes;
+			best = {
+				num_points: num_points,
+				num_classes: num_classes
+			}
+		}
+	}
+
 	config = get_data_config();
   chart = multi_scatter(config.path, config.attr, config.category, config.animate, null, "chart");
+	highlight = getParameterByName("highlight") === "true" ? true : false;
+	
+	if (highlight) {
+		document.getElementById("highlight_info").style.visibility = "visible";
+	}
 
   function preload() {
 		chart.preload();
@@ -59,7 +121,15 @@
 	}
 
 	function mouseReleased() {
-		chart.mouseReleased();
+		if (chart.mouseReleased() && highlight) {
+			var num_points_curr = chart.highlightRect.numPoints;
+			var num_classes_curr = chart.highlightRect.numClasses;
+			updateHighlightDataDisplay("curr", num_points_curr, num_classes_curr);
+			
+			if (num_points_curr > best.num_points) {
+				updateHighlightDataDisplay("best", num_points_curr, num_classes_curr);
+			}
+		}
 	}
 
 	function mouseMoved() {
