--- a/index.html
+++ b/index.html
@@ -1,49 +1,104 @@
-<html>
+<!DOCTYPE html>
 <head>
-  <meta charset="UTF-8">
-	<script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
-	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/addons/p5.dom.js"></script>
-	<script language="javascript" type="text/javascript" src="multi_scatter.js"></script>
-	<script language="javascript" type="text/javascript" src="load_data_config.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Animated SPLOMs</title>
+
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/bulma.min.css">
+  <link rel="stylesheet" href="css/animate.min.css">
+
+  <link rel="stylesheet" href="css/anisplom.css">
 </head>
+
 <body>
-	<div class="center">
-		<h1>Animated scatterplot matrix</h1>
-		<div>
-			<label htmlFor="data-select">Select a dataset to display</label>
-			<select id="data-select">
-					<option value="abalone">abalone</option>
-					<option value="diamonds">diamonds</option>
-					<option value="iris">iris</option>
-					<option selected value="synthetic">synthetic</option>
-					<option value="wine">wine</option>
-			</select>
-		</div>
-		<div id="chart"></div>
-		<div>
-			<table class="center" id="highlight_info">
-				<tr>
-					<th colspan="2">Current</th>
-					<th colspan="2">Best</th>
-				</tr>
-				<tr>
-					<th># points</th>
-					<th># classes</th>
-					<th># points</th>
-					<th># classes</th>
-				</tr>
-				<tr>
-					<td id="num_points_curr">0</th>
-					<td id="num_classes_curr">0</th>
-					<td id="num_points_best">0</th>
-					<td id="num_classes_best">0</th>
-				</tr>
-			</table>
-		</div>
-	</div>
-</body>
+
+<section class="hero is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Animated SPLOMs
+      </h1>
+
+      <!-- super fancy subtitle -->
+      <p class="subtitle">
+        Using
+        <!-- animated text -->
+        <span class="has-text-weight-bold" id="animation"><span>a</span><span>n</span><span>i</span><span>m</span><span>a</span><span>t</span><span>i</span><span>o</span><span>n</span></span>
+        to alleviate overdraw in a
+        <!-- multicolored text -->
+        <span class="has-text-weight-bold" id="multiclass"><span>m</span><span>u</span><span>l</span><span>t</span><span>i</span><span>c</span><span>l</span><span>a</span><span>s</span><span>s</span></span>
+        <!-- underlined text //-->
+        <u class="has-text-weight-bold">s</u>catter<u class="has-text-weight-bold">plo</u>t <u class="has-text-weight-bold">m</u>atrix (<span class="has-text-weight-bold">SPLOM</span>).
+      </p>
+
+      <!-- github links -->
+      <p class="has-text-centered">
+        <a class="button is-small is-outlined"><span class="icon"><i class="fa fa-github"></i></span>&nbsp; Website Repository</a>
+
+        <a class="button is-small is-outlined"><span class="icon"><i class="fa fa-github"></i></span>&nbsp; User Study Repository</a>
+      </p>
+
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="content">
+    <div class="columns">
+      <!-- dropdown for dataset selection -->
+      <div class="column is-narrow">
+        <label class="label">Select Dataset:</label>
+
+        <p class="control has-icons-left">
+          <span class="select">
+            <select id="data-select">
+              <option value="abalone">abalone</option>
+              <option value="diamonds">diamonds</option>
+              <option value="iris">iris</option>
+              <option value="synthetic">synthetic</option>
+              <option value="wine" selected>wine</option>
+            </select>
+          </span>
+          <span class="icon is-small is-left">
+            <i class="fa fa-table"></i>
+          </span>
+        </p>
+      </div>
+
+      <!-- div for anisplom chart -->
+      <div id="chart" class="column"></div>
+    </div>
+  </div>
+</section>
+
+<!-- information -->
+<section class="section">
+  <div class="content">
+    <h2>Parameters</h2>
+
+    <p>Our tool supports the following URL query parameters:</p>
+
+  </div>
+</section>
+
+<footer>
+  <div class="columns is-centered">
+    <div class="column is-three-quarters">
+      <div class="content is-small">
+        <p class="has-text-centered has-text-grey">Website built using <a href="https://daneden.github.io/animate.css/">Animate.css</a>, <a href="http://fontawesome.io/">FontAwesome</a>, and the <a href="http://bulma.io/">Bulma</a> CSS framework. This tool is free and unencumbered public domain software. For more information, see <a href="http://unlicense.org/">unlicense.org</a> or the accompanying LICENSE file.</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
+<script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
+<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/addons/p5.dom.js"></script>
+<script language="javascript" type="text/javascript" src="multi_scatter.js"></script>
+<script language="javascript" type="text/javascript" src="load_data_config.js"></script>
+
 <script language="javascript" type="text/javascript">
 
   var config;
@@ -79,23 +134,23 @@
 	}
 
 	function updateHighlightDataDisplay(type, num_points, num_classes) {
-		if (type === "curr") {
-			document.getElementById("num_points_curr").innerHTML = num_points;
-			document.getElementById("num_classes_curr").innerHTML = num_classes;
-		} else {
-			document.getElementById("num_points_best").innerHTML = num_points;
-			document.getElementById("num_classes_best").innerHTML = num_classes;
-			best = {
-				num_points: num_points,
-				num_classes: num_classes
-			}
-		}
+		// if (type === "curr") {
+		// 	document.getElementById("num_points_curr").innerHTML = num_points;
+		// 	document.getElementById("num_classes_curr").innerHTML = num_classes;
+		// } else {
+		// 	document.getElementById("num_points_best").innerHTML = num_points;
+		// 	document.getElementById("num_classes_best").innerHTML = num_classes;
+		// 	best = {
+		// 		num_points: num_points,
+		// 		num_classes: num_classes
+		// 	}
+		// }
 	}
 
 	config = get_data_config();
   chart = multi_scatter(config.path, config.attr, config.category, config.animate, null, "chart");
 	highlight = getParameterByName("highlight") === "true" ? true : false;
-	
+
 	if (highlight) {
 		document.getElementById("highlight_info").style.visibility = "visible";
 	}
@@ -103,19 +158,19 @@
   function preload() {
 		chart.preload();
 	}
-	
+
 	function setup() {
 		chart.setup();
 	}
-	
+
 	function draw() {
 		chart.draw();
 	}
-	
+
 	function mouseClicked() {
 		chart.mouseClicked();
 	}
-	
+
 	function mousePressed() {
 		chart.mousePressed();
 	}
@@ -125,7 +180,7 @@
 			var num_points_curr = chart.highlightRect.numPoints;
 			var num_classes_curr = chart.highlightRect.numClasses;
 			updateHighlightDataDisplay("curr", num_points_curr, num_classes_curr);
-			
+
 			if (num_points_curr > best.num_points) {
 				updateHighlightDataDisplay("best", num_points_curr, num_classes_curr);
 			}
@@ -135,10 +190,10 @@
 	function mouseMoved() {
 		chart.mouseMoved();
 	}
-	
+
 	function mouseDragged() {
 		chart.mouseDragged();
 	}
 
 </script>
-</html>
+</body>
