--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <script src="js/p5.dom.min.js"></script>
 
 <script src="js/datasets.js"></script>
-<script src="js/anisplom.js"></script>
+<script src="js/anisplom.min.js"></script>
 
 <script>
   var splom;
