--- a/index.html
+++ b/index.html
@@ -113,15 +113,21 @@
           </tr>
 
           <tr>
+            <td><code>encoding</code></td>
+            <td nowrap><strong><a href="?encoding=normal">normal</a></strong>, <a href="?encoding=open">open</a>,<br/> <a href="?encoding=alpha">alpha</a>, <a href="?encoding=blend">blend</a></td>
+            <td>Changes the point encoding. If <code>normal</code>, uses a circle filled by class with a white outline. If <code>open</code>, uses a circle with a outline colored by class and no fill. If <code>alpha</code>, uses the normal encoding plus alpha blending (turning on transparency). If <code>blend</code>, uses the normal encoding plus color blending.</td>
+          </tr>
+
+          <tr>
             <td><code>rows</code></td>
             <td nowrap><strong><a href="?rows=1">1</a></strong>, <a href="?rows=2">2</a>, ..., <var>n</var></td>
             <td>A positive integer value that controls the number of rows redrawn every animation frame. Must be less than <var>n</var>, the total number of rows in the dataset.</td>
           </tr>
 
           <tr>
-            <td><code>encoding</code></td>
-            <td nowrap><strong><a href="?encoding=normal">normal</a></strong>, <a href="?encoding=open">open</a>,<br/> <a href="?encoding=alpha">alpha</a>, <a href="?encoding=blend">blend</a></td>
-            <td>Changes the point encoding. If <code>normal</code>, uses a circle filled by class with a white outline. If <code>open</code>, uses a circle with a outline colored by class and no fill. If <code>alpha</code>, uses the normal encoding plus alpha blending (turning on transparency). If <code>blend</code>, uses the normal encoding plus color blending.</td>
+            <td><code>scale</code></td>
+            <td nowrap><a href="?scale=0.75">0.75</a>, <strong><a href="?scale=1">1.0</a></strong>, <a href="?scale=1.5">1.5</a>, ...</td>
+            <td>A positive floating point value that controls the scale of the SPLOM. Sizes between 0 and 1 will result in a smaller SPLOM, and sizes greater than 1 will increase the SPLOM size.</td>
           </tr>
         </tbody>
       </table>
